0.41
- many translations added, look at http://p4a.sourceforge.net/translations
- a few translation strings were added (for P4A_Table)
- fixed some bugs with the i18n/l10n engine
- Portuguese translation completed (thanks to Tiago)
- Estonian translation completed (thanks to Eero)

0.40
- TinyFCK was updated to 0.5
- P4A_Listener was removed because it was obsolete and unused
- P4A_Menu was totally refactored, dropping some methods
- PEAR packages were updated and cleaned out (now we only have PEAR 1.4.6, Console_Getopt 1.2, DB 1.7.6, HTML_Template_Flexy 1.2.4)
- new l10n formats loaded, 168 locales available
- bugfix on es_ES translations (removed htmlentities => UTF-8)
- some code reference was written

0.39
- fixed bug 1407473 (password obfuscator was shown also on null values)
- feature request 1413696 (removing non existing file does not produce a fatal error anymore)
- P4A_DENIED_EXTENSIONS constant was added
- P4A_Get_File_Extension() function was added to library
- P4A_Is_Extension_Allowed() function was added to library
- fixed bug 1404846 (when uploading a file with denied extension you'll get a fatal error)
- some methods were documented in the code reference

0.38
- Multiple DB connection support was added
- added setDSN method to p4a_db_source
- added getDSN method to p4a_db_source
- added setDSN method to p4a_data_field
- added getDSN method to p4a_data_field
- minor changes
- P4A_Box widget was added, it renders raw html
- Rich Text Editor was updated to TinyFCK 0.4
- Rich Text Editor image resizing was modularized a bit
- bugfix on RTE image resize
- minor changes

0.37
- MySQL Manager was removed from the main package and released as a contrib
- Base application contrib was released

0.36
- added CHANGELOG, README, COPYING and TODO files to code reference
- backward compatibility issue with P4A_Button was fixed
- a "find" icon was added (32x32)

0.35
- P4A_Table_Col can show image thumbnail: P4A_Table_Col::setType("image")