@@ -13,20 +13,22 @@ http://www.crealabs.it - info@crealabs.it
 -- Credits --
 -------------
 
-Joosep-Georg Järvemaa <georg@linux.ee>
-Christian G. Warden <cwarden@xerus.org>
-Juan Manuel Font Gutiérrez <juanmafont@telefonica.net>
-Julian Shen <julian_shen@users.sourceforge.net>
-Andriy Olischuk <biznw@km.ru>
-Victor Vernescu <victor@chain.ro>
-Robert Petersen <rmpp@gmx.net>
-Dominic Lüchinger <d.luechinger@bluewin.ch>
-Alen Toric <a.toric@quicknet.nl>
-Thiago Trindade <thiagownt@hotmail.com>
-Valery Sidorov <valery@blagovest.com>
+Joosep-Georg Järvemaa
+Christian G. Warden
+Juan Manuel Font Gutiérrez
+Julian Shen
+Andriy Olischuk
+Victor Vernescu
+Robert Petersen
+Dominic Lüchinger
+Alen Toric
+Thiago Trindade
+Valery Sidorov 
 Tomas Kuba
-Francesco Dominidiato <me@illogioco.com> (http://sourceforge.net/users/illogico)
+Francesco Dominidiato (http://sourceforge.net/users/illogico)
 Justin Koivisto (http://www.koivi.com)
 Major__Tom
 Tiago
 Eero
+Vanesa Callejo
+Jostein
