@@ -38,54 +38,55 @@
 
 $messages = array
 (
-    "days"				=> array('Domingo' , 'Lunes' , 'Martes' , 'Miércoles' , 'Jueves' , 'Viernes' , 'Sábado'),
-	"months"			=> array('Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio', 'Julio', 'Agosto', 'Septiembre', 'Octubre', 'Noviembre', 'Diciembre'),
+	// Date
+    "days"		=> array('Søndag', 'Mandag', 'Tirsdag', 'Onsdag', 'Torsdag', 'Fredag', 'Lørdag'),
+    "months"	=> array('Januar', 'Februar', 'Mars', 'April', 'Mai', 'Juni', 'Juli', 'August', 'September', 'Oktober', 'November', 'Desember'),
 
 	// Standard Toolbar
-	"save"				=> "Confirmar y guardar",
-	"cancel"			=> "Cancelar operación",
-	"new"				=> "Insertar registro nuevo",
-	"delete"			=> "Borrar registro actual",
-	"print"				=> "Imprimir",
-	"exit"				=> "Salir",
-	"first"				=> "Ir al primero",
-	"prev"				=> "Ir al anterior",
-	"next"				=> "Ir al siguiente",
-	"last"				=> "Ir al último",
-	"first_page"		=> "Ir a la primera página",
-	"prev_page"			=> "Ir a la página anterior",
-	"next_page"			=> "Ir a la página siguiente",
-	"last_page"			=> "Ir a la última página",
-	"go"				=> "Ir",
+	"save"				=> "Bekreft og lagre",
+	"cancel"			=> "Avbryt gjeldende operasjon",
+	"new"				=> "Legg inn en ny post",
+	"delete"			=> "Slett gjeldende post",
+	"print"				=> "Skriv ut",
+	"exit"				=> "Avslutt",
+	"first"				=> "Gå til det første elementet",
+	"prev"				=> "Gå til det forrige elementet",
+	"next"				=> "Gå til det neste elementet",
+	"last"				=> "Gå til det siste elementet",
+	"first_page"		=> "Gå til første side",
+	"prev_page"			=> "Gå til forrige side",
+	"next_page"			=> "Gå til neste side",
+	"last_page"			=> "Gå til siste side",
+	"go"				=> "Gå",
 
 	// Table
-	"current_page"		=> "Página",
-	"of_pages"			=> "de",
-	"go_to_page"		=> "Ir a la página",
-	"ascending"			=> "Ascendente",
-	"descending"		=> "Descendente",
-	"selected"			=> "Seleccionado",
+	"current_page"		=> "Side",
+	"of_pages"			=> "av",
+	"go_to_page"		=> "Gå til side",
+	"ascending"			=> "Stigende",
+	"descending"		=> "Synkende",
+	"selected"			=> "Valgte",
 
 	// File uploads
-	"filename"			=> "Nombre",
-	"filesize"			=> "Tamaño",
-	"filetype"			=> "Tipo",
-	"filepreview"		=> "Vista previa",
-	"filedelete"		=> "Borrar",
-	"filedownload"		=> "Descarga",
+	"filename"			=> "Navn",
+	"filesize"			=> "Størrelse",
+	"filetype"			=> "Type",
+	"filepreview"		=> "Forhåndsvis",
+	"filedelete"		=> "Slett",
+	"filedownload"		=> "Last ned",
 
 	// Fields
-	"none_selected"		=> "Ninguno seleccionado",
+	"none_selected"		=> "Ingen valgt",
 
 	// Confirmations
-	"confirm_general"	=> "¿Estás seguro?",
-	"confirm_confirm"	=> "¿Confirmar y guardar?",
-	"confirm_cancel"	=> "¿Cancelar operación actual?",
-	"confirm_delete"	=> "¿Borrar registro actual?",
+	"confirm_general"	=> "Er du sikker?",
+	"confirm_confirm"	=> "Bekreft og lagre?",
+	"confirm_cancel"	=> "Avbryt gjeldende operasjon?",
+	"confirm_delete"	=> "Slett gjeldende post?",
 
 	// Yes/No
-	"yes"				=> "Sí",
-	"no"				=> "No"
+	"yes"				=> "Ja",
+	"no"				=> "Nei"
 );
 
 ?>
